--- a/views/home.hbs
+++ b/views/home.hbs
@@ -225,7 +225,7 @@
                     <div class="item swiper-slide">
                         <div class="image">
                             <div class="ob-cover">
-                                <img src="././images/slider_01.jpg" alt="">
+                                <img src="./images/slider_01.jpg" alt="">
                             </div>
                             <div class="title-info">
                                 <div class="container wide">
@@ -241,7 +241,7 @@
                     <div class="item swiper-slide">
                         <div class="image">
                             <div class="ob-cover">
-                                <img src="././images/slider_02.jpg" alt="">
+                                <img src="./images/slider_02.jpg" alt="">
                             </div>
                             <div class="title-info">
                                 <div class="container wide">
@@ -257,7 +257,7 @@
                     <div class="item swiper-slide">
                         <div class="image">
                             <div class="ob-cover">
-                                <img src="././images/slider_03.jpg" alt="">
+                                <img src="./images/slider_03.jpg" alt="">
                             </div>
                             <div class="title-info">
                                 <div class="container wide">
@@ -288,7 +288,7 @@
                             <div class="item">
                                 <div class="dot-image">
                                     <div class="thumbnail hover">
-                                        <img src="././images/guide_01.png" alt="">
+                                        <img src="./images/guide_01.png" alt="">
                                     </div>
                                 </div>
                                 <div class="dot-info">
@@ -299,7 +299,7 @@
                             <div class="item">
                                 <div class="dot-image">
                                     <div class="thumbnail hover">
-                                        <img src="././images/guide_02.png" alt="">
+                                        <img src="./images/guide_02.png" alt="">
                                     </div>
                                 </div>
                                 <div class="dot-info">
@@ -310,7 +310,7 @@
                             <div class="item">
                                 <div class="dot-image">
                                     <div class="thumbnail hover">
-                                        <img src="././images/guide_03.png" alt="">
+                                        <img src="./images/guide_03.png" alt="">
                                     </div>
                                 </div>
                                 <div class="dot-info">
