--- a/views/home.hbs
+++ b/views/home.hbs
@@ -153,14 +153,14 @@
                                                                 <h3 class="dot-title">Shoes</h3>
                                                                 <ul>
                                                                     <li><a href="#">Louis Vuition</a></li>
-                                                                    <li><a href="#">Dolce & Gabbana</a></li>
+                                                                    <li><a href="#">Dolce and Gabbana</a></li>
                                                                     <li><a href="#">Gucci</a></li>
                                                                     <li><a href="#">Nike</a></li>
                                                                     <li><a href="#">Adidas</a></li>
                                                                 </ul>
                                                             </div>
                                                             <div class="list-block">
-                                                                <h3 class="dot-title">Perfume</h3>
+                                                                <h3 class="dot-title">Boots</h3>
                                                                 <ul>
                                                                     <li><a href="#">Armani</a></li>
                                                                     <li><a href="#">Channel</a></li>
