--- a/views/home.hbs
+++ b/views/home.hbs
@@ -700,13 +700,28 @@
                 </div>
             </div>
         </div>
-        <div class="guide">
-            <div class="container">
-                <div class="wrap">
-
+        <!--Carousel-->
+        <div class="bycats">
+                <div class="container">
+                    <div class="wrap">
+                        <div class="heading sort-list tabs">
+                            <span class="grey-color">in</span>
+                            <div class="wrap">
+                                <h3 class="opt-trigger">
+                                    <span class="value">Shoes</span>
+                                    <i class="ri-arrow-down-s-line"></i>
+                                </h3>
+                                <ul>
+                                    <li><a href="" class="tabbed-trigger">Shoes</a></li>
+                                    <li><a href="" class="tabbed-trigger">Jordan</a></li>
+                                    <li><a href="" class="tabbed-trigger">Gym and Trainning</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="tabbed"></div>
+                    </div>
                 </div>
             </div>
-        </div>
 
     </main>
     <footer></footer>
