--- a/views/home.hbs
+++ b/views/home.hbs
@@ -712,9 +712,9 @@
                                     <i class="ri-arrow-down-s-line"></i>
                                 </h3>
                                 <ul>
-                                    <li><a href="" class="tabbed-trigger">Shoes</a></li>
-                                    <li><a href="" class="tabbed-trigger">Jordan</a></li>
-                                    <li><a href="" class="tabbed-trigger">Gym and Trainning</a></li>
+                                    <li class="active"><a href="#0" class="tabbed-trigger">Shoes</a></li>
+                                    <li><a href="#0" class="tabbed-trigger">Jordan</a></li>
+                                    <li><a href="#0" class="tabbed-trigger">Gym and Trainning</a></li>
                                 </ul>
                             </div>
                         </div>
