--- a/views/home.hbs
+++ b/views/home.hbs
@@ -702,26 +702,290 @@
         </div>
         <!--Carousel-->
         <div class="bycats">
-                <div class="container">
-                    <div class="wrap">
-                        <div class="heading sort-list tabs">
-                            <span class="grey-color">in</span>
-                            <div class="wrap">
-                                <h3 class="opt-trigger">
-                                    <span class="value">Shoes</span>
-                                    <i class="ri-arrow-down-s-line"></i>
-                                </h3>
-                                <ul>
-                                    <li class="active"><a href="#0" class="tabbed-trigger">Shoes</a></li>
-                                    <li><a href="#0" class="tabbed-trigger">Jordan</a></li>
-                                    <li><a href="#0" class="tabbed-trigger">Gym and Trainning</a></li>
-                                </ul>
+            <div class="container">
+                <div class="wrap">
+                    <div class="heading sort-list tabs">
+                        <span class="grey-color">in</span>
+                        <div class="wrap">
+                            <h3 class="opt-trigger">
+                                <span class="value">Shoes</span>
+                                <i class="ri-arrow-down-s-line"></i>
+                            </h3>
+                            <ul>
+                                <li class="active"><a href="#0" class="tabbed-trigger">Shoes</a></li>
+                                <li><a href="#0" class="tabbed-trigger">Jordan</a></li>
+                                <li><a href="#0" class="tabbed-trigger">Gym and Trainning</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tabbed">
+                        <div id="shoes" class="sort-data active">
+                            <div class="dotgrid">
+                                <div class="wrapper">
+                                    <div class="item">
+                                        <div class="dot-image">
+                                            <a href="" class="product-permalink"></a>
+                                            <div class="thumbnail">
+                                                <img src="./images/product_01.jpg" alt="">
+                                            </div>
+                                            <div class="thumbnail hover">
+                                                <img src="./images/product_01b.jpg" alt="">
+                                            </div>
+                                            <div class="actions">
+                                                <ul>
+                                                    <li><a href=""><i class="ri-star-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="label"><span>-25%</span></div>
+                                        </div>
+                                        <div class="dot-info">
+                                            <h2 class="dot-title"><a href="">The Sweater
+                                                    in Tosca</a></h2>
+                                            <div class="product-price"></div>
+                                            <span class="before">$80.00</span>
+                                            <span class="before"></span>
+                                            <span class="before"></span>
+
+
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="dot-image">
+                                            <a href="" class="product-permalink"></a>
+                                            <div class="thumbnail">
+                                                <img src="./images/product_02.jpg" alt="">
+                                            </div>
+                                            <div class="thumbnail hover">
+                                                <img src="./images/product_02b.jpg" alt="">
+                                            </div>
+                                            <div class="actions">
+                                                <ul>
+                                                    <li><a href=""><i class="ri-star-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="label"><span>-25%</span>
+                                            </div>
+                                        </div>
+                                        <div class="dot-info">
+                                            <h2 class="dot-title"><a href="">The Sweater
+                                                    in Tosca</a></h2>
+                                            <div class="product-price"></div>
+                                            <span class="before">$80.00</span>
+                                            <span class="current">$30.00</span>
+                                            <span class="before"></span>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="dot-image">
+                                            <a href="" class="product-permalink"></a>
+                                            <div class="thumbnail">
+                                                <img src="./images/product_03.jpg" alt="">
+                                            </div>
+                                            <div class="thumbnail hover">
+                                                <img src="./images/product_03b.jpg" alt="">
+                                            </div>
+                                            <div class="actions">
+                                                <ul>
+                                                    <li><a href=""><i class="ri-star-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="label"><span>-25%</span></div>
+                                        </div>
+                                        <div class="dot-info">
+                                            <h2 class="dot-title"><a href="">The Sweater
+                                                    in Tosca</a></h2>
+                                            <div class="product-price"></div>
+                                            <span class="before">$80</span>
+                                            <span class="before"></span>
+                                            <span class="before"></span>
+
+
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="dot-image">
+                                            <a href="" class="product-permalink"></a>
+                                            <div class="thumbnail">
+                                                <img src="./images/product_04.jpg" alt="">
+                                            </div>
+                                            <div class="thumbnail hover">
+                                                <img src="./images/product_04b.jpg" alt="">
+                                            </div>
+                                            <div class="actions">
+                                                <ul>
+                                                    <li><a href=""><i class="ri-star-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="label"><span>-25%</span></div>
+                                        </div>
+                                        <div class="dot-info">
+                                            <h2 class="dot-title"><a href="">The Sweater
+                                                    in Tosca</a></h2>
+                                            <div class="product-price"></div>
+                                            <span class="before">$80</span>
+                                            <span class="before"></span>
+                                            <span class="before"></span>
+
+
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="dot-image">
+                                            <a href="" class="product-permalink"></a>
+                                            <div class="thumbnail">
+                                                <img src="./images/product_05.jpg" alt="">
+                                            </div>
+                                            <div class="thumbnail hover">
+                                                <img src="./images/product_05b.jpg" alt="">
+                                            </div>
+                                            <div class="actions">
+                                                <ul>
+                                                    <li><a href=""><i class="ri-star-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="label"><span>-25%</span></div>
+                                        </div>
+                                        <div class="dot-info">
+                                            <h2 class="dot-title"><a href="">The Sweater
+                                                    in Tosca</a></h2>
+                                            <div class="product-price"></div>
+                                            <span class="before">$80</span>
+                                            <span class="before"></span>
+                                            <span class="before"></span>
+
+
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="dot-image">
+                                            <a href="" class="product-permalink"></a>
+                                            <div class="thumbnail">
+                                                <img src="./images/product_06.jpg" alt="">
+                                            </div>
+                                            <div class="thumbnail hover">
+                                                <img src="./images/product_06b.jpg" alt="">
+                                            </div>
+                                            <div class="actions">
+                                                <ul>
+                                                    <li><a href=""><i class="ri-star-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="label"><span>-25%</span></div>
+                                        </div>
+                                        <div class="dot-info">
+                                            <h2 class="dot-title"><a href="">The Sweater
+                                                    in Tosca</a></h2>
+                                            <div class="product-price"></div>
+                                            <span class="before">$80</span>
+                                            <span class="before"></span>
+                                            <span class="before"></span>
+
+
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="dot-image">
+                                            <a href="" class="product-permalink"></a>
+                                            <div class="thumbnail">
+                                                <img src="./images/product_07.jpg" alt="">
+                                            </div>
+                                            <div class="thumbnail hover">
+                                                <img src="./images/product_07b.jpg" alt="">
+                                            </div>
+                                            <div class="actions">
+                                                <ul>
+                                                    <li><a href=""><i class="ri-star-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="label"><span>-25%</span></div>
+                                        </div>
+                                        <div class="dot-info">
+                                            <h2 class="dot-title"><a href="">The Sweater
+                                                    in Tosca</a></h2>
+                                            <div class="product-price"></div>
+                                            <span class="before">$80</span>
+                                            <span class="before"></span>
+                                            <span class="before"></span>
+
+
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="dot-image">
+                                            <a href="" class="product-permalink"></a>
+                                            <div class="thumbnail">
+                                                <img src="./images/product_08.jpg" alt="">
+                                            </div>
+                                            <div class="thumbnail hover">
+                                                <img src="./images/product_08b.jpg" alt="">
+                                            </div>
+                                            <div class="actions">
+                                                <ul>
+                                                    <li><a href=""><i class="ri-star-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                    </li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="label"><span>-25%</span></div>
+                                        </div>
+                                        <div class="dot-info">
+                                            <h2 class="dot-title"><a href="">The Sweater
+                                                    in Tosca</a></h2>
+                                            <div class="product-price"></div>
+                                            <span class="before">$80</span>
+                                            <span class="before"></span>
+                                            <span class="before"></span>
+
+
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="tabbed"></div>
+
                     </div>
+
                 </div>
             </div>
+        </div>
 
     </main>
     <footer></footer>
