--- a/views/home.hbs
+++ b/views/home.hbs
@@ -712,9 +712,9 @@
                                 <i class="ri-arrow-down-s-line"></i>
                             </h3>
                             <ul>
-                                <li class="active"><a href="#0" class="tabbed-trigger">Shoes</a></li>
-                                <li><a href="#0" class="tabbed-trigger">Jordan</a></li>
-                                <li><a href="#0" class="tabbed-trigger">Gym and Trainning</a></li>
+                                <li class="active"><a data-id="shoes" href="#0" class="tabbed-trigger">Shoes</a></li>
+                                <li><a data-id="jordan" href="#0" class="tabbed-trigger">Jordan</a></li>
+                                <li><a data-id="gym" href="#0" class="tabbed-trigger">Gym and Trainning</a></li>
                             </ul>
                         </div>
                     </div>
@@ -1178,7 +1178,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="gymtrainning" class="sort-data">
+                        <div id="gym" class="sort-data">
                             <div class="dotgrid">
                                 <div class="wrapper">
                                     <div class="item">
@@ -1407,12 +1407,22 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
 
-                </div>
-            </div>
-        </div>
+                    <div class="guide">
+                        <div class="container">
+                            <div class="wrap">
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="guide">
+                        <div class="container">
+                            <div class="wrap">
+                                
+                            </div>
+                        </div>
+                    </div>
 
     </main>
     <footer></footer>
