--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1409,20 +1409,43 @@
                         </div>
                     </div>
 
-                    <div class="guide">
+                    <div class="banner">
                         <div class="container">
                             <div class="wrap">
-                                
+                                <div class="content">
+                                    <span>Promo</span>
+                                    <h3 class="title">Get ready!<br>Summer is coming now..</h3>
+                                    <div class="button"><a href="" class="primary-btn">Let's do it</a></div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="guide">
+
+                    <div class="fromblog">
                         <div class="container">
                             <div class="wrap">
-                                
+                                <div class="heading">
+                                    <h2 class="title">From the blog</h2>
+                                </div>
+                                <div class="dotgrid scrollto">
+                                    <div class="wrapper">
+                                        <div class="dot-image">
+                                            <div class="thumbnail hover">
+                                                <a href="">
+                                                    <img src="./imgages/blog_01.jpg" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="dot-info">
+                                            <a href="">Gym and Trainning</a>
+                                            <h3 class="dot-title">
+                                                <a href="">How do you feel today?</a>
+                                            </h3>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
     </main>
     <footer></footer>
