--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -823,12 +823,12 @@ main>div .heading {
   --grid-col: 300px;
 }
 
-:is(.guide) .dot-image .thumbnail {
+:is(.guide, .fromblog) .dot-image .thumbnail {
   position: relative;
   opacity: unset;
 }
 
-.guide .dot-image .thumbnail img {
+:is(.guide, .fromblog).guide .dot-image .thumbnail img {
   width: 100%;
 }
 
@@ -968,6 +968,54 @@ main>div .heading {
 .sort-data.active {
   display: block;
 }
+
+
+/* ----------------------------- *
+ 
+            #BANNER
+ 
+ * ----------------------------- */
+
+.banner {
+  background-color: var(--light-color);
+  background-image: url(./images/banner.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-origin: border-box;
+}
+
+.banner .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
+}
+
+.banner .content span {
+  font-size: var(--fs14);
+  text-transform: uppercase;
+}
+
+.banner h3 {
+  --fs-max: 80px;
+}
+
+@media(min-width: 786px) {
+  .banner {
+    background-size: contain;
+  }
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
