--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1424,23 +1424,25 @@
                     <div class="fromblog">
                         <div class="container">
                             <div class="wrap">
-                                <div class="heading">
-                                    <h2 class="title">From the blog</h2>
-                                </div>
-                                <div class="dotgrid scrollto">
-                                    <div class="wrapper">
-                                        <div class="dot-image">
-                                            <div class="thumbnail hover">
-                                                <a href="">
-                                                    <img src="./imgages/blog_01.jpg" alt="">
-                                                </a>
+                                <div class="item">
+                                    <div class="heading">
+                                        <h2 class="title">From the blog</h2>
+                                    </div>
+                                    <div class="dotgrid scrollto">
+                                        <div class="wrapper">
+                                            <div class="dot-image">
+                                                <div class="thumbnail hover">
+                                                    <a href="">
+                                                        <img src="./imgages/blog_01.jpg" alt="">
+                                                    </a>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="dot-info">
-                                            <a href="">Gym and Trainning</a>
-                                            <h3 class="dot-title">
-                                                <a href="">How do you feel today?</a>
-                                            </h3>
+                                            <div class="dot-info">
+                                                <a href="">Gym and Trainning</a>
+                                                <h3 class="dot-title">
+                                                    <a href="">How do you feel today?</a>
+                                                </h3>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
