--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -978,7 +978,7 @@ main>div .heading {
 
 .banner {
   background-color: var(--light-color);
-  background-image: url(./images/banner.png);
+  background-image: url(../images/banner.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: right;
