--- a/views/home.hbs
+++ b/views/home.hbs
@@ -714,7 +714,7 @@
                             <ul>
                                 <li class="active"><a data-id="shoes" href="#0" class="tabbed-trigger">Shoes</a></li>
                                 <li><a data-id="jordan" href="#0" class="tabbed-trigger">Jordan</a></li>
-                                <li><a data-id="gym" href="#0" class="tabbed-trigger">Gym and Trainning</a></li>
+                                <li><a data-id="gym" href="#0" class="tabbed-trigger">Trainning</a></li>
                             </ul>
                         </div>
                     </div>
@@ -1408,7 +1408,7 @@
                             </div>
                         </div>
                     </div>
-
+                    <!--Banner-->
                     <div class="banner">
                         <div class="container">
                             <div class="wrap">
@@ -1420,34 +1420,134 @@
                             </div>
                         </div>
                     </div>
-
+                    <!--Blog-->
                     <div class="fromblog">
                         <div class="container">
                             <div class="wrap">
-                                <div class="item">
-                                    <div class="heading">
-                                        <h2 class="title">From the blog</h2>
-                                    </div>
-                                    <div class="dotgrid scrollto">
-                                        <div class="wrapper">
+                                <div class="heading">
+                                    <h2 class="title">From the blog</h2>
+                                </div>
+                                <div class="dotgrid scrollto">
+                                    <div class="wrapper">
+                                        <div class="item">
                                             <div class="dot-image">
                                                 <div class="thumbnail hover">
                                                     <a href="">
-                                                        <img src="./imgages/blog_01.jpg" alt="">
+                                                        <img src="./images/blog_01.jpg" alt="">
                                                     </a>
                                                 </div>
                                             </div>
                                             <div class="dot-info">
-                                                <a href="">Gym and Trainning</a>
+                                                <a href="">Feeling</a>
                                                 <h3 class="dot-title">
                                                     <a href="">How do you feel today?</a>
                                                 </h3>
                                             </div>
                                         </div>
+                                        <div class="item">
+                                            <div class="dot-image">
+                                                <div class="thumbnail hover">
+                                                    <a href="">
+                                                        <img src="./images/blog_02.jpg" alt="">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="dot-info">
+                                                <a href="">Tips</a>
+                                                <h3 class="dot-title">
+                                                    <a href="">Property wear shoe on gymerday</a>
+                                                </h3>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="dot-image">
+                                                <div class="thumbnail hover">
+                                                    <a href="">
+                                                        <img src="./images/blog_03.jpg" alt="">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="dot-info">
+                                                <a href="">Trainning</a>
+                                                <h3 class="dot-title">
+                                                    <a href="">What should I wear this shoes?</a>
+                                                </h3>
+                                            </div>
+                                        </div>
                                     </div>
+                                </div>
+                                <div class="button">
+                                    <a href="" class="secondary-btn">Read more</a>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="frominsta">
+                        <div class="container">
+                            <div class="wrap">
+                                .heading>h2.title{Popular Instagram Photos}
+                            </div>
+                            <div class="dotgrid scrollto">
+                                <div class="wrapper">
+                                    <div class="item">
+                                        <div class="dot-image">
+                                            <a href=""></a>
+                                            <div class="thumbnail">
+                                                <a href="./images/ig_01.jpg"></a>
+                                            </div>
+                                            <div class="actions">
+                                                <i class="ri-instagram-line"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                     <div class="item">
+                                        <div class="dot-image">
+                                            <a href=""></a>
+                                            <div class="thumbnail">
+                                                <a href="./images/ig_05.jpg"></a>
+                                            </div>
+                                            <div class="actions">
+                                                <i class="ri-instagram-line"></i>
+                                            </div>
+                                        </div>
+                                    </div> <div class="item">
+                                        <div class="dot-image">
+                                            <a href=""></a>
+                                            <div class="thumbnail">
+                                                <a href="./images/ig_02.jpg"></a>
+                                            </div>
+                                            <div class="actions">
+                                                <i class="ri-instagram-line"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                     <div class="item">
+                                        <div class="dot-image">
+                                            <a href=""></a>
+                                            <div class="thumbnail">
+                                                <a href="./images/ig_03.jpg"></a>
+                                            </div>
+                                            <div class="actions">
+                                                <i class="ri-instagram-line"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                     <div class="item">
+                                        <div class="dot-image">
+                                            <a href=""></a>
+                                            <div class="thumbnail">
+                                                <a href="./images/ig_04.jpg"></a>
+                                            </div>
+                                            <div class="actions">
+                                                <i class="ri-instagram-line"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
     </main>
     <footer></footer>
