--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1550,7 +1550,75 @@
                     </div>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="inner-footer">
+            <div class="container">
+                <div class="wrap">
+                    <div class="top">
+                        <div class="subscribe">
+                            <h3>Get voucher from us</h3>
+                            <p class="grey-color">Enter your email be the first to know about new collections from us</p>
+                            <form action="" class="search">
+                                <i class="ri-mail-line"></i>
+                                <input type="text" class="input" placeholder="Enter your email">
+                                <input type="submit" class="submit">
+                                <i class="ri-arrow-right-line"></i>
+                            </form>
+                        </div>
+                        <div class="list-block">
+                            <h3 class="dot-title">Service</h3>
+                            <ul>
+                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Careers</a></li>
+                                <li><a href="#">Delivery Information</a></li>
+                                <li><a href="#">Terms & Condition</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="list-block">
+                            <h3 class="dot-title">Pages</h3>
+                            <ul>
+                                <li><a href="#">My account</a></li>
+                                <li><a href="#">Login</a></li>
+                                <li><a href="#">Wishlist</a></li>
+                                <li><a href="#">Cart</a></li>
+                                <li><a href="#">Checkout</a></li>
+                            </ul>
+                        </div>
+                        <div class="list-block">
+                            <h3 class="dot-title">Pages</h3>
+                            <div class="comp-address grey-color">
+                                <p>227 Nguyễn Văn Cừ Street<br>District 5,Ward 4,HCM City</p>
+                                <p>
+                                    <a href="">+84928928329</a>
+                                    <br>
+                                    <a href="">shoppingshoes@gmail.com</a>
+                                </p>
+                                <p>
+                                    Weekdays: 9AM to 5PM<br>
+                                    Saturday: 9AM to 3PM<br>
+                                    Sunday: Closed
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bottom">
+                        <div class="list-inline">
+                            <ul>
+                                <li><a href=""><i class="ri-facebook-line"></i></a></li>
+                                <li><a href=""><i class="ri-instagram-line"></i></a></li>
+                                <li><a href=""><i class="ri-twitter-line"></i></a></li>
+                                <li><a href=""><i class="ri-pinterest-line"></i></a></li>
+                            </ul>
+                        </div>
+                        <div class="copyright">
+                            <p>© 2023 Shopping, Inc. All Rights Reserved</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 <div class="overlay" data-overlay></div>
 <div id="mobile-menu" class="mobile-menu">
