--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1500,7 +1500,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                     <div class="item">
+                                    <div class="item">
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
@@ -1510,7 +1510,8 @@
                                                 <i class="ri-instagram-line"></i>
                                             </div>
                                         </div>
-                                    </div> <div class="item">
+                                    </div>
+                                    <div class="item">
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
@@ -1521,7 +1522,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                     <div class="item">
+                                    <div class="item">
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
@@ -1532,7 +1533,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                     <div class="item">
+                                    <div class="item">
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
@@ -1543,7 +1544,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    
+
                                 </div>
                             </div>
                         </div>
@@ -1557,7 +1558,8 @@
                     <div class="top">
                         <div class="subscribe">
                             <h3>Get voucher from us</h3>
-                            <p class="grey-color">Enter your email be the first to know about new collections from us</p>
+                            <p class="grey-color">Enter your email be the first to know about new collections from us
+                            </p>
                             <form action="" class="search">
                                 <i class="ri-mail-line"></i>
                                 <input type="text" class="input" placeholder="Enter your email">
