--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -3,6 +3,7 @@
         <div class="theform">
             <div class="play"></div>
             <div class="signup"></div>
+            <div class="signin"></div>
         </div>
     </div>
 </div>
