--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -1,8 +1,27 @@
 <div id="page" class="site">
     <div class="container">
         <div class="theform">
-            <div class="play"></div>
-            <div class="signup"></div>
+            <div class="play">
+                <div class="wrapper">
+                    <div class="card one"></div>
+                    <div class="card two"></div>
+                    <div class="card three"></div>
+                    <div class="card four"></div>
+                    <div class="card five"></div>
+                </div>
+            </div>
+            <div class="signup">
+                <nav>
+                    <ul>
+                        <li><a href="#"></a></li>
+                        <li>Already member?<a href="#">Sign in</a></li>
+                    </ul>
+                </nav>
+                <div class="heading">
+                    <h2></h2>
+                    <p></p>
+                </div>
+            </div>
             <div class="signin"></div>
         </div>
     </div>
