--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -13,16 +13,81 @@
             <div class="signup">
                 <nav>
                     <ul>
-                        <li><a href="#"></a></li>
-                        <li>Already member?<a href="#">Sign in</a></li>
+                        <li><a href="#0"><i class="ri-arrow-left-line"></i></a></li>
+                        <li>Already member?<a href="#0">Sign in</a></li>
                     </ul>
                 </nav>
                 <div class="heading">
-                    <h2></h2>
-                    <p></p>
+                    <h2>Sign Up</h2>
+                    <p>We secure your data privacy encrypted.</p>
                 </div>
+                <form action="">
+                    <p>
+                        <i class="ri-user-3-line"></i>
+                        <input type="text" placeholder="Full name">
+                    </p>
+                    <p>
+                        <i class="ri-mail-line"></i>
+                        <input type="email" placeholder="Your email address">
+                    </p>
+                    <p>
+                        <i class="ri-lock-line"></i>
+                        <i class="ri-eye-off-line"></i>
+                        <input type="password" placeholder="Enter password">
+                    </p>
+                    <p>
+                        <i class="ri-lock-line"></i>
+                        <input type="password" placeholder="Re-Enter password">
+                    </p>
+                    <div class="actions">
+                        <label>
+                            <input type="submit" value="Sign up">
+                            <i class="ri-arrow-right-line"></i>
+                        </label>
+                        <p class="socials">
+                            <button>
+                                <i class="ri-facebook-line"></i>
+                            </button>
+                        </p>
+                        <p></p>
+                    </div>
+                </form>
             </div>
-            <div class="signin"></div>
+            <div class="signin">
+                <nav>
+                    <ul>
+                        <li><a href="#0"><i class="ri-arrow-left-line"></i></a></li>
+                        <li>Don't have an account?<a href="#0">Sign up</a></li>
+                    </ul>
+                </nav>
+                <div class="heading">
+                    <h2>Sign In</h2>
+                    <p>We secure your data privacy encrypted.</p>
+                </div>
+                <form action="">
+                    <p>
+                        <i class="ri-mail-line"></i>
+                        <input type="email" placeholder="Your email address">
+                    </p>
+                    <p>
+                        <i class="ri-lock-line"></i>
+                        <input type="password" placeholder="Enter password">
+                    </p>
+                    <div class="actions">
+                        <label>
+                            <input type="submit" value="Sign up">
+                            <i class="ri-arrow-right-line"></i>
+                        </label>
+                        <p class="socials">
+                            <button>
+                                <i class="ri-facebook-line"></i>
+                            </button>
+                        </p>
+                        <p></p>
+                    </div>
+                </form>
+
+            </div>
         </div>
     </div>
 </div>
