--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -41,9 +41,10 @@
                     </p>
                     <div class="actions">
                         <label>
-                            <input type="submit" value="Sign up">
+                            <input type="submit" value="Sign Up">
                             <i class="ri-arrow-right-line"></i>
                         </label>
+                        <p>Or</p>
                         <p class="socials">
                             <button>
                                 <i class="ri-facebook-line"></i>
@@ -75,9 +76,10 @@
                     </p>
                     <div class="actions">
                         <label>
-                            <input type="submit" value="Sign up">
+                            <input type="submit" value="Sign In">
                             <i class="ri-arrow-right-line"></i>
                         </label>
+                        <p>Or</p>
                         <p class="socials">
                             <button>
                                 <i class="ri-facebook-line"></i>
