--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1485,7 +1485,9 @@
                     <div class="frominsta">
                         <div class="container">
                             <div class="wrap">
-                                .heading>h2.title{Popular Instagram Photos}
+                                <div class="heading">
+                                    <h2 class="title">Popular Instagram Photos</h2>
+                                </div>
                             </div>
                             <div class="dotgrid scrollto">
                                 <div class="wrapper">
@@ -1624,7 +1626,6 @@
 </div>
 <div class="overlay" data-overlay></div>
 <div id="mobile-menu" class="mobile-menu">
-
     <div class="wrap">
         <a href="" class="close-trigger active" close-button>
             <i class="ri-close-line"></i>
@@ -1684,6 +1685,4 @@
             </div>
         </div>
     </div>
-
-
 </div>
