--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,7 @@
 </head>
   <body>
     {{{body}}}
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./javascripts/script.js"></script>
   </body>
 </html>
