--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -175,19 +175,13 @@ h4 {
   color: var(--white-color);
 }
 
-/* .title {
-    font-size: clamp(30px, -0.875em + 8.333vw, var(--fs-max, 40ps));
-} */
+.title {
+  font-size: clamp(30px, -0.875em + 8.333vw, var(--fs-max, 40ps));
+}
 
 .grey-color {
   color: var(--grey-color);
 }
-
-
-
-
-
-
 
 
 /* ----------------------------- *
@@ -1162,6 +1156,67 @@ main>div .heading {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+
+/* ----------------------------- *
+ 
+          #Page-single
+ 
+ * ----------------------------- */
+/* ----------------------------- *
+ 
+          #Breadcrumb
+ 
+ * ----------------------------- */
+
+.breadcrumb {
+  width: 100%;
+  line-height: initial;
+  padding: 30px 0 50px;
+}
+
+.breadcrumb ul {
+  justify-content: center;
+}
+
+.breadcrumb ul li {
+  position: relative;
+  margin-right: 10px;
+}
+
+.breadcrumb ul li:not(:first-child) {
+  padding-left: 25px;
+}
+
+.breadcrumb ul li:not(:first-child)::before {
+  content: '>';
+  position: absolute;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.breadcrumb ul :where(li, li a) {
+  font-size: var(--fs14);
+  padding: 0;
+
+}
+
+.breadcrumb ul li:last-child {
+  color: var(--grey-color);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+
+
+
+
+
+
 
 
 
