--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -230,7 +230,7 @@
                                 <div class="container wide">
                                     <div class="wrap">
                                         <span class="price">$40</span>
-                                        <h3 class="title">Feel the tosca color</h3>
+                                        <h3 class="title">Feel the summer color</h3>
                                         <div class="button"><a href="" class="primary-btn">Shop Now</a></div>
                                     </div>
                                 </div>
@@ -246,7 +246,7 @@
                                 <div class="container wide">
                                     <div class="wrap">
                                         <span class="price">$40</span>
-                                        <h3 class="title">Feel the tosca color</h3>
+                                        <h3 class="title">Feel the summer color</h3>
                                         <div class="button"><a href="" class="primary-btn">Shop Now</a></div>
                                     </div>
                                 </div>
@@ -262,7 +262,7 @@
                                 <div class="container wide">
                                     <div class="wrap">
                                         <span class="price">$40</span>
-                                        <h3 class="title">Feel the tosca color</h3>
+                                        <h3 class="title">Feel the summer color</h3>
                                         <div class="button"><a href="" class="primary-btn">Shop Now</a></div>
                                     </div>
                                 </div>
