--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1,3 +1,9 @@
+@model MyNamespace.ViewModels.WhateverViewModel
+@section Scripts
+{
+  <script src="@Url.Content("~/javascripts/script.js")"></script>
+}
+
 <div id="page" class="page-home">
     <header>
         <div class="inner-header">
