--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,10 +13,13 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap">
   <link href="https://fonts.cdnfonts.com/css/prata-2">
   <link rel="stylesheet" href="./stylesheets/style.css">
+  <script src="@Url.Content("~/javascripts/scripts.js")"></script>
+    @RenderSection("javascripts",false/*required*/)
 </head>
 
 <body>
   {{{body}}}
+  @RenderBody()
   <script src="./javascripts/script.js"></script>
 </body>
 
